objects/Wellsfargo__c.object
<CustomObject>
    <description>wF obj second</description>
    <fields>
        <fullName>Field_for_Testing__c</fullName>
        <description>field second</description>
        <label>Field for Testing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_for_testing22__c</fullName>
        <description>Field for testing22 second</description>
        <label>Field for testing22</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_for_testing2345__c</fullName>
        <label>Field for testing2345</label>
        <type>TextArea</type>
    </fields>
    <label>Wellsfargo</label>
    <nameField>
        <label>Wellsfargo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wellsfargo</pluralLabel>
    <recordTypes>
        <fullName>Recordtype_1</fullName>
        <active>true</active>
        <label>Recordtype 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recordtype_2</fullName>
        <active>true</active>
        <label>Recordtype 2</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Custom_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Name &lt;&gt;&apos;Test&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Test validation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Wellsfargo_validation_test_rules11</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS(Field_for_Testing__c, &quot;a&quot;)</errorConditionFormula>
        <errorMessage>text started with a</errorMessage>
    </validationRules>
</CustomObject>